2000-11-26  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* include/am_utils.h (MAXHOSTNAMELEN): if not defined, set this to
	256 bytes, not 64.   Suggestion form Kris Kennaway
	<kris@FreeBSD.org>.

2000-11-26  Erez Zadok  <ezk@dmath5.geometrie.tuwien.ac.at>

	* configure.in (AC_CHECK_MNT2_NFS_OPTS): check for NFS mount
	options kerb, rdirplus, readdirsize, and xlatecookie
	(NetBSD-1.5K).

	* acconfig.h: recognize NFS mount options rdirplus, readdirsize,
	and xlatecookie (NetBSD-1.5K)

2000-11-24  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* amd/srvr_nfs.c: comment on NFS proto search order.

	* libamu/xutil.c (real_plog): don't try to write the last byte of
	the fmt buf.  security suggtion from NetBSD: Thomas Klausner
	<wiz@danbala.ifoer.tuwien.ac.at>

2000-11-22  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* amd/amfs_auto.c (amfs_auto_bgmount): removed the initialization of
	fattr.na_fileid, it is now done in map.c when the map is initialized

	* amd/map.c (init_map): initialize fattr.na_fileid to am_gen, not
	to 0, to avoid cache aliasing problems on Linux (and to follow the
	NFS spec!)

2000-11-22  Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>

	* libamu/mount_fs.c (mount_fs): avoid using extra limited-size buf
	(security)

	* libamu/xutil.c, fsinfo/fsinfo.h, include/am_utils.h: use
	__attribute__, __format__, and __printf__ for GCC string auditing.

	* wire-test/wire-test.8: this is not a section 8L man page.

	* libamu/xutil.c (expand_error): don't use sys_nerr on systems
	that support strerror().
	(dplog): fmt is const
	(plog): fmt is const
	(real_plog): fmt is const.  use new expand_error function with its
	new return value. be more careful about running off the end of
	char[] fixed size buffers.

	* libamu/wire.c (getwire): fix alignment error on alpha using an
	extra automatic storage variable ifrpool.

	* hlfsd/hlfsd.c (fatal): use proper printf style to plog.

	* fsinfo/fsinfo.c (find_username): getlogin() returns a const.
