@@ -1,3 +1,8 @@
+2000-11-27  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
+
+	* libamu/wire.c (getwire_lookup): truncate the hostname to
+	MAXHOSTNAMELEN characters.
+
 2000-11-26  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>
 
 	* include/am_utils.h (MAXHOSTNAMELEN): if not defined, set this to
